--- a/src/api/VotingIrregularities.Api/appsettings.json
+++ b/src/api/VotingIrregularities.Api/appsettings.json
@@ -12,9 +12,9 @@
     "AccountKey": "TBR",
     "UseHttps": true
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "TBR"
-  },
+	"ConnectionStrings": {
+		"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
+	},
   // CACHE KEY VALABILITY
   "DefaultCacheHours": 0,
   "DefaultCacheMinutes": 30,
