--- a/src/api/VotingIrregularities.Api/VotingIrregularities.Api.csproj
+++ b/src/api/VotingIrregularities.Api/VotingIrregularities.Api.csproj
@@ -1,60 +1,61 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PreserveCompilationContext>true</PreserveCompilationContext>
-    <AssemblyName>VotingIrregularities.Api</AssemblyName>
-    <OutputType>Exe</OutputType>
-    <PackageId>VotingIrregularities.Api</PackageId>
-    <UserSecretsId>TBRWithASecretkey</UserSecretsId>
-    <ProjectGuid>{61445EF2-8644-4832-BF05-60900CF76BD3}</ProjectGuid>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <NoWarn>1701;1702;1591</NoWarn>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Remove="Helpers\**" />
-    <Compile Remove="Models\PollingStation\**" />
-    <Content Remove="Helpers\**" />
-    <Content Remove="Models\PollingStation\**" />
-    <EmbeddedResource Remove="Helpers\**" />
-    <EmbeddedResource Remove="Models\PollingStation\**" />
-    <None Remove="Helpers\**" />
-    <None Remove="Models\PollingStation\**" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\VoteMonitor.Api.Answer\VoteMonitor.Api.Answer.csproj" />
-    <ProjectReference Include="..\VoteMonitor.Api.Core\VoteMonitor.Api.Core.csproj" />
-    <ProjectReference Include="..\VoteMonitor.Api.Form\VoteMonitor.Api.Form.csproj" />
-    <ProjectReference Include="..\VoteMonitor.Api.Location\VoteMonitor.Api.Location.csproj" />
-    <ProjectReference Include="..\VoteMonitor.Api.Note\VoteMonitor.Api.Note.csproj" />
-    <ProjectReference Include="..\VoteMonitor.Api.Observer\VoteMonitor.Api.Observer.csproj" />
-    <ProjectReference Include="..\VotingIrregularities.Domain\VotingIrregularities.Domain.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="JsonWebTokens" Version="3.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="MediatR" Version="4.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Redis.Core" Version="1.0.3" />
-    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="5.5.0" />
-    <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="3.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="4.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="4.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="4.0.1" />
-    <PackageReference Include="System.Linq.Queryable" Version="4.3.0" />
-    <PackageReference Include="AutoMapper" Version="7.0.1" />
-    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.6.1" />
-    <PackageReference Include="StackExchange.Redis" Version="1.2.6" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
-    <PackageReference Include="SimpleInjector" Version="4.3.0" />
-    <PackageReference Include="SimpleInjector.Integration.AspNetCore" Version="4.3.1" />
-    <PackageReference Include="SimpleInjector.Integration.AspNetCore.Mvc" Version="4.3.1" />
-    <PackageReference Include="WebApiContrib.Core" Version="2.2.0" />
-    <PackageReference Include="FluentValidation" Version="7.6.105" />
-    <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp2.2</TargetFramework>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<PreserveCompilationContext>true</PreserveCompilationContext>
+		<AssemblyName>VotingIrregularities.Api</AssemblyName>
+		<OutputType>Exe</OutputType>
+		<PackageId>VotingIrregularities.Api</PackageId>
+		<UserSecretsId>TBRWithASecretkey</UserSecretsId>
+		<ProjectGuid>{61445EF2-8644-4832-BF05-60900CF76BD3}</ProjectGuid>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<PlatformTarget>AnyCPU</PlatformTarget>
+		<NoWarn>1701;1702;1591</NoWarn>
+	</PropertyGroup>
+	<ItemGroup>
+		<Folder Include="wwwroot\" />
+		<Compile Remove="Helpers\**" />
+		<Compile Remove="Models\PollingStation\**" />
+		<Content Remove="Helpers\**" />
+		<Content Remove="Models\PollingStation\**" />
+		<EmbeddedResource Remove="Helpers\**" />
+		<EmbeddedResource Remove="Models\PollingStation\**" />
+		<None Remove="Helpers\**" />
+		<None Remove="Models\PollingStation\**" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\VoteMonitor.Api.Answer\VoteMonitor.Api.Answer.csproj" />
+		<ProjectReference Include="..\VoteMonitor.Api.Core\VoteMonitor.Api.Core.csproj" />
+		<ProjectReference Include="..\VoteMonitor.Api.Form\VoteMonitor.Api.Form.csproj" />
+		<ProjectReference Include="..\VoteMonitor.Api.Location\VoteMonitor.Api.Location.csproj" />
+		<ProjectReference Include="..\VoteMonitor.Api.Note\VoteMonitor.Api.Note.csproj" />
+		<ProjectReference Include="..\VoteMonitor.Api.Observer\VoteMonitor.Api.Observer.csproj" />
+		<ProjectReference Include="..\VotingIrregularities.Domain\VotingIrregularities.Domain.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="JsonWebTokens" Version="3.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.App" />
+		<PackageReference Include="MediatR" Version="4.1.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Redis.Core" Version="1.0.3" />
+		<PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="5.5.0" />
+		<PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="3.0.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="4.0.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="4.0.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="4.0.1" />
+		<PackageReference Include="System.Linq.Queryable" Version="4.3.0" />
+		<PackageReference Include="AutoMapper" Version="7.0.1" />
+		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.6.1" />
+		<PackageReference Include="StackExchange.Redis" Version="1.2.6" />
+		<PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
+		<PackageReference Include="SimpleInjector" Version="4.3.0" />
+		<PackageReference Include="SimpleInjector.Integration.AspNetCore" Version="4.3.1" />
+		<PackageReference Include="SimpleInjector.Integration.AspNetCore.Mvc" Version="4.3.1" />
+		<PackageReference Include="WebApiContrib.Core" Version="2.2.0" />
+		<PackageReference Include="FluentValidation" Version="7.6.105" />
+		<PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
+		<PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+	</ItemGroup>
 </Project>
