--- a/src/api/VotingIrregularities.Api/VotingIrregularities.Api.csproj
+++ b/src/api/VotingIrregularities.Api/VotingIrregularities.Api.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\VoteMonitor.Api.County\VoteMonitor.Api.County.csproj" />
+    <ProjectReference Include="..\..\VoteMonitor.Api.Ngo\VoteMonitor.Api.Ngo.csproj" />
     <ProjectReference Include="..\VoteMonitor.Api.DataExport\VoteMonitor.Api.DataExport.csproj" />
     <ProjectReference Include="..\VoteMonitor.Api.Answer\VoteMonitor.Api.Answer.csproj" />
     <ProjectReference Include="..\VoteMonitor.Api.Core\VoteMonitor.Api.Core.csproj" />
