cover with tests

--- a/src/api/VotingIrregularities.Api/appsettings.json
+++ b/src/api/VotingIrregularities.Api/appsettings.json
@@ -15,7 +15,7 @@
 		"UseHttps": true
 	},
 	"ConnectionStrings": {
-		"DefaultConnection": "TBR"
+        "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
 	},
 	"FileServiceOptions": {
 		"Type": "LocalFileService", /* LocalFileStorage for.. well.. local file storage. Anything else for Azure Blob Storage (until further implementations)*/
