--- a/src/api/VotingIrregularities.Api/VotingIrregularities.Api.csproj
+++ b/src/api/VotingIrregularities.Api/VotingIrregularities.Api.csproj
@@ -32,14 +32,13 @@
     <None Remove="Models\PollingStation\**" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\VoteMonitor.Api.County\VoteMonitor.Api.County.csproj" />
-    <ProjectReference Include="..\..\VoteMonitor.Api.Ngo\VoteMonitor.Api.Ngo.csproj" />
+    <ProjectReference Include="..\VoteMonitor.Api.County\VoteMonitor.Api.County.csproj" />
     <ProjectReference Include="..\VoteMonitor.Api.DataExport\VoteMonitor.Api.DataExport.csproj" />
     <ProjectReference Include="..\VoteMonitor.Api.Answer\VoteMonitor.Api.Answer.csproj" />
     <ProjectReference Include="..\VoteMonitor.Api.Core\VoteMonitor.Api.Core.csproj" />
-    <ProjectReference Include="..\VoteMonitor.Api.County\VoteMonitor.Api.County.csproj" />
     <ProjectReference Include="..\VoteMonitor.Api.Form\VoteMonitor.Api.Form.csproj" />
     <ProjectReference Include="..\VoteMonitor.Api.Location\VoteMonitor.Api.Location.csproj" />
+    <ProjectReference Include="..\VoteMonitor.Api.Ngo\VoteMonitor.Api.Ngo.csproj" />
     <ProjectReference Include="..\VoteMonitor.Api.Note\VoteMonitor.Api.Note.csproj" />
     <ProjectReference Include="..\VoteMonitor.Api.Notification\VoteMonitor.Api.Notification.csproj" />
     <ProjectReference Include="..\VoteMonitor.Api.Observer\VoteMonitor.Api.Observer.csproj" />
